src/test/ui/infinite/infinite-recursion-const-fn.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/infinite-recursion-const-fn.rs:3:25
   |
LL | const fn a() -> usize { b() }
   |                         ^^^
   |                         |
   |                         reached the configured maximum number of stack frames
   |                         inside call to `b` at $DIR/infinite-recursion-const-fn.rs:3:25
LL | const fn b() -> usize { a() }
   |                         ---
   |                         |
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
   |                         inside call to `a` at $DIR/infinite-recursion-const-fn.rs:4:25
LL | const ARR: [i32; a()] = [5; 6];
   |                  --- inside call to `a` at $DIR/infinite-recursion-const-fn.rs:5:18

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
